regression-tests/test-results/apple-clang-16-c++2b/pure2-default-arguments.cpp.output
pure2-default-arguments.cpp2:6:56: error: cannot take address of consteval function 'current' outside of an immediate invocation
    6 |     char const* fn = CPP2_UFCS_NONLOCAL(function_name)(std::source_location::current())
      |                                                        ^
/Applications/Xcode_16.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/source_location:60:36: note: declared here
   60 |   static consteval source_location current(__bsl_ty __ptr = __builtin_source_location()) noexcept {
      |                                    ^
1 error generated.
